--- a/resume.html
+++ b/resume.html
@@ -3,42 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" type="text/css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Roberto Oliveira - Resume</title>
+    <title>Rosie</title>
 </head>
 <body>
     <header>
         <div class="row no-gutters">
-            <a class="col-md-4 logo" href="index.html"></a>
+            <a class="col-md-4 logo" href="02-index.html"></a>
             <div class="col-md-8">
                 <div class="row no-gutters bg-color-name-title">
                     <div class="col heading">
                         <h1 class="name">Rosie Odenkirk</h1>
-                        <h2 class="title">Full Stack Developer</h2>
-                    </div>   
+                        <h2 class="title"> Full Stack Developer</h2>
+                    </div>
                 </div>
                 <div class="row no-gutters">
                     <div class="col">
-                        <ul id="nav" class="list-inline menucontainer">
-                            <li class="col-6 col-sm-3 ui-menu-color-home list-inline-item menuitem">
+                        <ul id="nav" class="list-inline menucontainer row">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-home menuitem">
                                 <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-resume list-inline-item menuitem">
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-resume menuitem">
                                 <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-contact list-inline-item menuitem">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-contact menuitem">
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class=" fa fa-commenting-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-6 col-sm-3 ui-menu-color-download list-inline-item menuitem">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
-                            </li>                                                                                    
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-interests menuitem">
+                                <a href="interests.html" class="hvr-sweep-to-bottom"><i class="fa fa-users" aria-hidden="true"></i><span>Interests</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-github menuitem">
+                                <a href="github.html" class="hvr-sweep-to-bottom"><i class="fa fa-github" aria-hidden="true"></i><span>GitHub</span></a>
+                            </li>
+                            <li class="col-xs-6 col-sm-2 ui-menu-color-download menuitem">
+                                <a href="assets/cv/sample-cv.pdf" target="_blank" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download CV</span></a>
+                            </li>
                         </ul>
                     </div>
                 </div>
-
             </div>
         </div>
     </header>
@@ -51,30 +57,30 @@
                             Work History
                         </h3>
                     </div>
-                </div>        
+                </div>
                 <div class="history-items">
                     <div class="timeline-item" data-dates="02/1998 - 04/2004">
                         <h4>National College of Art and Design (NCAD)</h4>
                         <p>Sculptor in residence</p>
-                    </div>   
+                    </div>
                     <div class="timeline-item" data-dates="04/2004 - 06/2008">
-                        <h4>Company 1</h4>
-                        <p>Position</p>
-                    </div>   
+                        <h4>Fisher and Diaz Funeral Directors</h4>
+                        <p>Junior Embalmer</p>
+                    </div>
                     <div class="timeline-item" data-dates="06/2008 - 06/2011">
-                        <h4>Company 2</h4>
-                        <p>Position</p>
-                    </div>   
+                        <h4>Phantom Design Inc. Dublin</h4>
+                        <p>Junior Front End Developer</p>
+                    </div>
                     <div class="timeline-item" data-dates="06/2011 - Present">
-                        <h4>Company 3</h4>
-                        <p>Position</p>
-                    </div>                                                   
+                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <p>Full Stack Web Developer</p>
+                    </div>
                 </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
                     <div class="col">
-                    <h3 class="section-heading uppercase">My Skills</h3>
+                        <h3 class="section-heading uppercase">My Skills</h3>
                     </div>
                 </div>
                 <div class="row">
@@ -85,7 +91,9 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
-                                <p>I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.</p>
+                                <p>
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. I also have extensive experience in Front End Frameworks such as Angular and React
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -96,10 +104,12 @@
                             </div>
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
-                                <p>I'm a skilled Full Stack Developer with a wealth of diverse life and technical experience that I bring to every project.</p>
+                                <p>
+                                    I specialize in data-driven web applications. Many of my projects utilise document-based data. I use Python and Django in conjunction with MongoDB to process and present information.
+                                </p>
                             </div>
                         </div>
-                    </div>                                                         
+                    </div>
                 </div>
                 <div class="row progress-section">
                     <div class="col">
@@ -119,7 +129,7 @@
                             <div class="progress-bar bg-info" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%;">
                                 <span class="sr-only">70% complete</span>
                             </div>
-                            <span class="progress-type">Javascript / JQuery</span>
+                            <span class="progress-type">JavaScript / jQuery</span>
                         </div>
                         <div class="progress">
                             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
@@ -131,24 +141,27 @@
                             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%;">
                                 <span class="sr-only">80% complete</span>
                             </div>
-                            <span class="progress-type">NoSQL / SQL</span>
+                            <span class="progress-type">SQL / NoSQL</span>
                         </div>
                     </div>
-                </div>                                                          
+                </div>
             </div>
         </div>
+        
     </section>
     <footer class="container-fluid">
-        <div class="row" id="footer-details">
+        <div id="footer-details" class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
-                <p class="inline-block">Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.</p>
+                <p class="inline-block">
+                    Full Stack Web Developer. Skilled in everything from HTML to Heroku. The capacity for structural and design thinking.
+                </p>
             </div>
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">
                     Need a printable version of my CV? Download it here.
-                    <a href="#" target="_blank" class="cv-pdf">
+                    <a href="assets/cv/sample-cv.pdf" target="_blank" class="cv-pdf">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <span class="sr-only">Download link.</span>
                     </a>
@@ -158,44 +171,44 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
-                            <span class="sr-only">facebook</span>
+                            <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
-                            <span class="sr-only">twitter</span>
+                            <span class="sr-only">Twitter</span>
                         </a>
-                    </li>   
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
-                            <span class="sr-only">linkedin</span>
+                            <span class="sr-only">LinkedIn</span>
                         </a>
-                    </li>    
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            <span class="sr-only">pinterest</span>
+                            <span class="sr-only">Pinterest</span>
                         </a>
-                    </li>             
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
-                            <span class="sr-only">instagram</span>
+                            <span class="sr-only">Instagram</span>
                         </a>
-                    </li>   
+                    </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a target="_blank" href="#">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
-                            <span class="sr-only">youtube</span>
+                            <span class="sr-only">YouTube</span>
                         </a>
-                    </li>                                                                             
+                    </li>
                 </ul>
             </div>
         </div>
-    </footer>    
+    </footer>
 </body>
 </html>
