Added Google Maps whith markers

--- a/interests.html
+++ b/interests.html
@@ -192,6 +192,8 @@
             </div>
         </div>
     </footer>
+    <script src="https://unpkg.com/@googlemaps/markerclustererplus/dist/index.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7ImSZAMzJp1dz8GebhxeIzGwxI5sgjtQ&callback=initMap&libraries=&v=weekly" async></script>    
+    <script src="assets/js/maps.js"></script>
 </body>
-
 </html>
